Fixed issue with the td in the toggles section getting triggering a text wrap unnecessarily

--- a/page/styles/ids.css
+++ b/page/styles/ids.css
@@ -48,7 +48,7 @@
 
 #toggles-section-table td:first-child
 {
-	padding-right: 30vw;
+	width: 100%;
 }
 
 #toggles-section-bg::before
